<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red"
    >


    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="366dp"
        android:layout_height="42dp"
        android:layout_marginTop="392dp"
        android:ems="10"
        android:hint="@string/hit1"
        android:inputType="textPersonName"
        android:textColor="@color/contentBodyColor"
        android:textColorHint="@color/contentBodyColor"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="35dp"
        android:layout_height="37dp"
        app:srcCompat="@drawable/baseline_account_circle_24"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName"
        app:layout_constraintTop_toTopOf="@+id/editTextTextPersonName" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="361dp"
        android:layout_height="47dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/hit2"
        android:inputType="textPersonName"
        android:textColorHint="@color/contentBodyColor"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.432"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="29dp"
        android:layout_height="30dp"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName2"
        app:layout_constraintTop_toTopOf="@+id/editTextTextPersonName2"
        app:srcCompat="@drawable/baseline_add_moderator_24" />

    <Button
        android:id="@+id/loginbutton"
        android:layout_width="151dp"
        android:layout_height="56dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="#000414"
        android:text="@string/btext1"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />

    <Button
        android:id="@+id/registerbutton"
        android:layout_width="147dp"
        android:layout_height="55dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="28dp"
        android:backgroundTint="#000414"
        android:text="@string/btext2"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="319dp"
        android:layout_height="67dp"
        android:fontFamily="@font/archivo_black"
        android:text="WELLCOME"
        android:textColor="#F8EFEF"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.168" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="143dp"
        android:layout_height="48dp"
        android:fontFamily="@font/archivo_black"
        android:text="NOTE+"
        android:textColor="@color/contentBodyColor"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.88"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.32" />

</androidx.constraintlayout.widget.ConstraintLayout>