<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red"
  >


    <EditText
        android:id="@+id/editTextFullName"
        android:layout_width="373dp"
        android:layout_height="49dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="276dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/hit3"
        android:inputType="textPersonName"
        android:textColorHint="@color/contentBodyColor"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="32dp"
        android:layout_height="31dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="@+id/editTextFullName"
        app:layout_constraintTop_toTopOf="@+id/editTextFullName"
        app:srcCompat="@drawable/baseline_account_circle_24" />

    <EditText
        android:id="@+id/editTextAge"
        android:layout_width="376dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/hit4"
        android:inputType="number"
        android:textColorHint="@color/contentBodyColor"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextFullName" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="32dp"
        android:layout_height="31dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="@+id/editTextAge"
        app:layout_constraintTop_toTopOf="@+id/editTextAge"

        />


    <EditText
        android:id="@+id/editTextPhoneNumber"
        android:layout_width="382dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/hit5"
        android:inputType="phone"
        android:textColorHint="@color/contentBodyColor"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextAge" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="28dp"
        android:layout_height="34dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="@+id/editTextPhoneNumber"
        app:layout_constraintTop_toTopOf="@+id/editTextPhoneNumber"

        />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/hit6"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/contentBodyColor"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhoneNumber" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="28dp"
        android:layout_height="29dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="@+id/editTextEmail"
        app:layout_constraintTop_toTopOf="@+id/editTextEmail"
        app:srcCompat="@drawable/baseline_alternate_email_24"
        />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="373dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/hit7"
        android:inputType="textPassword"
        android:textColorHint="@color/contentBodyColor"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="31dp"
        android:layout_height="32dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="@+id/editTextPassword"
        app:layout_constraintTop_toTopOf="@+id/editTextPassword"
        app:srcCompat="@drawable/baseline_add_moderator_24"
        />

    <Button
        android:id="@+id/register2"
        android:layout_width="336dp"
        android:layout_height="57dp"
        android:layout_marginTop="28dp"
        android:backgroundTint="#000414"
        android:text="@string/btext3"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="313dp"
        android:layout_height="89dp"
        android:fontFamily="@font/archivo_black"
        android:text="Register "
        android:textColor="@color/contentBodyColor"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.612"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.121" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/archivo_black"
        android:text="Now"
        android:textColor="@color/contentBodyColor"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.87"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.224" />


</androidx.constraintlayout.widget.ConstraintLayout>
